# chip8-emu

./: .gitignore  README.md  chip8.py  dummy.rom  main.py  pyproject.toml  rom_writer.py
chip8/: __init__.py  cpu.py  display.py  errors.py  input.py  memory.py  timers.py  utils.py
tests/: test_cpu.py  test_display.py  test_memory.py  test_utils.py
