[project]
name = "chip-8-emu"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Ovchinnikov",email = "mail@dimka.online"}
]
readme = "README.md"
dynamic = [ "dependencies" ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pudb = "^2024.1.3"

