[project]
name = "chip-8-emu"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Ovchinnikov",email = "mail@dimka.online"}
]
readme = "README.md"
dynamic = [ "dependencies" ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pudb = "^2024.1.3"
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
ruff = "^0.11.3"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=chip8 --cov-report=html"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover"]

[tool.coverage.html]
directory = ".coverage_report"

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "single"

[tool.ruff.lint]
preview = true
select = [
    "I",     # isort
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "N",     # PEP8 naming
    "UP",    # pyupgrade
    "PL",    # pylint
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "T10",   # flake8-debugger
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "PERF",  # Perflint
    "FURB",  # REFURB
    "RUF",   # Ruff specific rules
]
ignore = [
    "PLR2004",   # magic-value-comparison
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true  # Allows ANY for args/kwargs

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101",    # assert
    "ANN",     # flake8-annotations
    "PLR2004", # magic-value-comparison
    "N802",    # invalid-function-name
]
